--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="js/generateContent.js"></script>
+  <script src="js/generateContent.js" type="text/javascript">
+  </script>
+  <script src="js/layout.js" type="text/javascript">
+  </script>
 </head>
 
 <body>
-  <div class="block" id="header">
+  <div class="block vw50" id="header">
     <div class="block-content">
       <img src="images/logo/logo_portfolio.png"></img>
     </div>
