--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>Yang's Portfolio</title>
+  <link rel="icon" type="image/png" href="./fav/favicon-32x32.png" />
+  <link rel="icon" type="image/png" href="./fav/favicon-16x16.png" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
