--- a/index.html
+++ b/index.html
@@ -2,30 +2,32 @@
 <html lang="en">
 
 <head>
-  <title>Yang's Portfolio</title>
-  <link rel="icon" type="image/png" href="./fav/favicon-32x32.png" />
-  <link rel="icon" type="image/png" href="./fav/favicon-16x16.png" />
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="js/generateContent.js" type="text/javascript">
-  </script>
-  <script src="js/layout.js" type="text/javascript">
-  </script>
+    <title>Yang's Portfolio</title>
+    <link rel="icon" type="image/png" href="./fav/favicon-32x32.png" />
+    <link rel="icon" type="image/png" href="./fav/favicon-16x16.png" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/generateContent.js" type="text/javascript">
+    </script>
+    <script src="js/layout.js" type="text/javascript">
+    </script>
 </head>
 
 <body>
-  <div class="block vw50" id="header">
-    <div class="block-content">
-      <img src="images/logo/logo_portfolio.png"></img>
-    </div>
-    <div class="hover-content">
+    <div class="header" id = "headerBlock">
+        <div class="header-content">
+            <img src="images/logo/logoBG.jpg" class="header gifLayer" alt="logo background">
+            <img class="header cover" src="images/logo/logo_portfolio.png" alt="my logo">
+        </div>
+        <div class="hoverLayer"></div>
+        <div class="hover-content">
+
+        </div>
 
     </div>
-
-  </div>
 </body>
 
 </html>
