link to my blog added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 </head>
 
 <body>
+  <div class="toMyBlog">
+    <a href="http://yangyang.blog/">
+      <img class="toMyBlog" src="images/logo/myBlog.png" alt="back to my blog">
+</a>
+  </div>
     <div class="header" id = "headerBlock">
         <div class="header-content">
             <img src="images/logo/logoBG.jpg" class="header gifLayer" alt="logo background">
