--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <script src="js/generateContent.js" type="text/javascript">
     </script>
     <script src="js/layout.js" type="text/javascript">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-visible/1.2.0/jquery.visible.js"></script>
     </script>
 </head>
 
 <body>
-  <div class="toMyBlog">
+  <!-- <div class="toMyBlog">
     <a href="http://yangyang.blog/">
       <img class="toMyBlog" src="images/logo/myBlog.png" alt="back to my blog">
 </a>
-  </div>
+  </div> -->
     <div class="header" id = "headerBlock">
         <div class="header-content">
             <img src="images/logo/logoBG.jpg" class="header gifLayer" alt="logo background">
