--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </script>
     <script src="js/layout.js" type="text/javascript">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-visible/1.2.0/jquery.visible.js"></script>
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 
 <body>
