--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
         </div>
       </div>
     </div> <!-- close row -->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div>isMobile: {{isMobile}}</div>
   </div> <!-- close container -->
 
 </body>
