--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="collapse navbar-collapse" id="myToggleNav">
         <div class="navbar-nav ml-auto  ">
           <a class="nav-item nav-link active" href="http://yangyang.blog/portfolio/">Projects</a>
-          <a class="nav-item nav-link" href="http://yangyang.blog/">Latest</a>
+          <a class="nav-item nav-link" href="http://yangyang.blog/latest">Latest</a>
           <a class="nav-item nav-link" href="http://yangyang.blog/about/">About Me</a>
           <a class="nav-item nav-link" href="http://yangyang.blog/contact/">Contact</a>
         </div>
