--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="navbar-nav ml-auto  ">
           <a class="nav-item nav-link active" href="http://yangyang.blog/portfolio/">Projects</a>
           <a class="nav-item nav-link" href="http://yangyang.blog/latest">Latest</a>
-          <a class="nav-item nav-link" href="http://yangyang.blog/about/">About Me</a>
+          <a class="nav-item nav-link" href="http://yangyang.blog/about/">About</a>
           <a class="nav-item nav-link" href="http://yangyang.blog/contact/">Contact</a>
         </div>
       </div>
