--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
   <nav class="navbar bg-none navbar-dark navbar-expand-sm" id="header">
     <div class="container-fluid">
       <a class="navbar-brand" href="http://yangyang.blog/portfolio/"><b>Yang's Projects</b></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myToggleNav"
+      <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#myToggleNav"
         aria-controls="myToggleNav" aria-label="Navigation Toggler">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="myToggleNav">
         <div class="navbar-nav ml-auto  ">
-          <a class="nav-item nav-link active" href="http://yangyang.blog/portfolio/">Projects</a>
-          <a class="nav-item nav-link" href="http://yangyang.blog/latest">Latest</a>
-          <a class="nav-item nav-link" href="http://yangyang.blog/about/">About</a>
-          <a class="nav-item nav-link" href="http://yangyang.blog/contact/">Contact</a>
+          <a class="nav-item nav-link ml-auto active" href="http://yangyang.blog/portfolio/">Projects</a>
+          <a class="nav-item nav-link ml-auto" href="http://yangyang.blog/latest">Latest</a>
+          <a class="nav-item nav-link ml-auto" href="http://yangyang.blog/about/">About</a>
+          <a class="nav-item nav-link ml-auto" href="http://yangyang.blog/contact/">Contact</a>
         </div>
       </div>
     </div>
