--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="https://unpkg.com/vue-observe-visibility/dist/vue-observe-visibility.min.js"></script>
   <script src="js/vueApp.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.min.js"></script>
-  <script src="js/sketch.js"></script>
+  <!-- <script src="js/sketch.js"></script> -->
   <script src="js/logo.js"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans&display=swap" rel="stylesheet">
