--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="Yang's Blog" content="Displaying my recent projects." />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.min.js"></script>
-  <!-- <script src="%PUBLIC_URL%/logo.js"></script> -->
+  <script src="%PUBLIC_URL%/logo.js"></script>
   <title>Yang's Blog</title>
 </head>
 
