--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="Yang's Blog" content="Displaying my recent projects." />
   <title>Yang's Blog</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
+  <script src="%PUBLIC_URL%/logo.js"></script>
 </head>
 
 <body>
