--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" href="%PUBLIC_URL%/fav/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="Yang's Blog" content="Displaying my recent projects." />
-  <title>Yang's Blog</title>
+  <meta name="Yang's Portfolio" content="Showcasing my recent projects." />
+  <title>Yang's Portfolio</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
   <script src="%PUBLIC_URL%/logo.js"></script>
 </head>
